Mon Oct 28 14:41:27 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import ruby-electric.el 2.1 from
	  https://github.com/knu/ruby-electric.el.

	  * Hitting the newline-and-indent key within a comment fires
	    comment-indent-new-line.

	  * Introduce a new feature
	    `ruby-electric-autoindent-on-closing-char`.

	  * Fix fallback behavior of ruby-electric-space/return that
	    caused error with auto-complete.

Mon Oct 28 13:17:17 2013  Or Cohen  <orc@fewbytes.com>

	* error.c (name_err_to_s): remove no longer needed overriding, since
	  r30455 which made exc_to_s almost same.  Fixes [GH-413].

Mon Oct 28 12:42:11 2013  Tanaka Akira  <akr@fsij.org>

	* common.mk, ext/objspace/depend, ext/coverage/depend,
	  ext/-test-/debug/depend, ext/date/depend: Update dependencies.

Mon Oct 28 09:29:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* vm.c: vm_clear_all_cache is not necessary now we use a 64 bit counter
	  for global state version.

	* vm_insnhelper.h: ruby_vm_global_state_version overflow is unnecessary

Mon Oct 28 07:47:32 2013  Aman Gupta <ruby@tmm1.net>

	* vm_backtrace.c (rb_profile_frame_classpath): do not use rb_inspect
	  directly, since it might have a custom implementation or show ivars.

Mon Oct 28 04:10:41 2013  Aman Gupta <ruby@tmm1.net>

	* vm_backtrace.c (rb_profile_frame_classpath): handle singleton
	  methods defined directly on an object.
	* test/-ext-/debug/test_profile_frames.rb: test for above.

Mon Oct 28 00:52:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (new_struct): fix warning message, class name and encoding.

Sun Oct 27 20:53:08 2013  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c: Include ruby/thread.h for
	  rb_thread_call_without_gvl2.
	  (readline_rl_instream, readline_rl_outstream): Record FILE
	  structures allocated by this extension.
	  (getc_body): New function extracted from readline_getc.
	  (getc_func): New function.